app build fix